Updated wikiXML_to_sql.py to allow you to specify a starting wiki_id, allowing you to import giant databases in multiple sessions. Also updates SQL table to better handle all the fucked-up UTF characters that are out there.

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Author: Kevin Crane
 
-Playing with giant datasets. An attempt to map all of the knowledge in the world by drawing
-connections between Wikipedia topics. Will identify which topics are the most influential in
-general knowledge, as well as what each topic is related to by links. Hopefully I'll learn
-how to make a visualization too, that'd be awesome.
+Playing with giant datasets. An attempt to map all of the knowledge in the world by
+drawing connections between Wikipedia topics. Will identify which topics are the
+most influential in general knowledge, as well as what each topic is related to by
+links. Hopefully I'll learn how to make a visualization too, that'd be awesome.
